tp3/doc/logfile.txt
Class documentation
<---- javadoc command: ---->
C:\Program Files\BlueJ\jdk\bin\javadoc.exe
-author
-version
-nodeprecated
-package
-Xdoclint:none
-noindex
-notree
-nohelp
-nonavbar
-source
11
-classpath
C:\Program Files\BlueJ\lib\bluejcore.jar;C:\Program Files\BlueJ\lib\junit-4.11.jar;C:\Program Files\BlueJ\lib\hamcrest-core-1.3.jar;C:\Program Files\BlueJ\lib\lang-stride.jar;C:\Program Files\BlueJ\lib\javafx\lib\javafx.base.jar;C:\Program Files\BlueJ\lib\javafx\lib\javafx.controls.jar;C:\Program Files\BlueJ\lib\javafx\lib\javafx.fxml.jar;C:\Program Files\BlueJ\lib\javafx\lib\javafx.graphics.jar;C:\Program Files\BlueJ\lib\javafx\lib\javafx.media.jar;C:\Program Files\BlueJ\lib\javafx\lib\javafx.properties.jar;C:\Program Files\BlueJ\lib\javafx\lib\javafx.swing.jar;C:\Program Files\BlueJ\lib\javafx\lib\javafx.web.jar;D:\MyGit\nfp121.tp3\tp3
-d
D:\MyGit\nfp121.tp3\tp3\doc
-encoding
windows-1252
-charset
windows-1252
D:\MyGit\nfp121.tp3\tp3\question1\Pile.java
<---- end of javadoc command ---->
Loading source file D:\MyGit\nfp121.tp3\tp3\question1\Pile.java...
D:\MyGit\nfp121.tp3\tp3\question1\Pile.java:91: error: class, interface, or enum expected
	public void actionPerformed(ActionEvent ae) {
	       ^
D:\MyGit\nfp121.tp3\tp3\question1\Pile.java:96: error: class, interface, or enum expected
                contenu.setText(p.toString());
                ^
D:\MyGit\nfp121.tp3\tp3\question1\Pile.java:97: error: class, interface, or enum expected
            } catch (PilePleineException e) {
            ^
D:\MyGit\nfp121.tp3\tp3\question1\Pile.java:99: error: class, interface, or enum expected
            } catch (NumberFormatException nfe) {
            ^
D:\MyGit\nfp121.tp3\tp3\question1\Pile.java:101: error: class, interface, or enum expected
            }
            ^
D:\MyGit\nfp121.tp3\tp3\question1\Pile.java:106: error: class, interface, or enum expected
                contenu.setText(p.toString());
                ^
D:\MyGit\nfp121.tp3\tp3\question1\Pile.java:107: error: class, interface, or enum expected
            } catch (PileVideException e) {
            ^
D:\MyGit\nfp121.tp3\tp3\question1\Pile.java:109: error: class, interface, or enum expected
            }
            ^
8 errors
